--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
         <!-- Navigation-Button  -->
         <nav class="nav-button">
             <button onclick="showCalculator('persegi', this)">PERSEGI</button>
-            <button onclick="showCalculator('persegiPanjang', this)">PERSEGI PANJANG</button>
+            <button onclick="showCalculator('persegipanjang', this)">PERSEGI PANJANG</button>
         </nav>
 
         <!-- Section-Persegi -->
         <section id="persegi" class="calculator hidden">
 
             <!-- Luas-Persegi -->
-            <div class="hitungLuasKel">
+            <div class="hitungluaskel">
                 <h2>Luas Persegi</h2>
                 <!-- Gambar-Persegi -->
-                <div class="gambarPersegi"></div>
+                <div class="gambarpersegi"></div>
                 <!-- Keterangan-Rumus -->
                 <div class="keterangan">
                     <p>Rumus Luas Persegi Yaitu :</p>
@@ -47,16 +47,16 @@
                     <h2>Hitung Luas Persegi</h2>
                     <input type="number" id="sisi" placeholder="Nilai Sisi"><br>
                     <button class="hitung" onclick="luasPersegi()">Hitung Luas</button>
-                    <p id="hasilLuasPersegi"></p>
+                    <p id="hasilluaspersegi"></p>
                     <button class="reset" onclick="resetLuasPersegi()">Reset</button>
                 </div>
             </div>
 
             <!-- Keliling-Persegi -->
-            <div class="hitungLuasKel">
+            <div class="hitungluaskel">
                 <h2>Keliling Persegi</h2>
                 <!-- Gambar-Persegi -->
-                <div class="gambarPersegi"></div>
+                <div class="gambarpersegi"></div>
                 <!-- Keterangan-Rumus -->
                 <div class="keterangan">
                     <p>Rumus Luas Persegi Yaitu :</p>
@@ -66,22 +66,22 @@
                 <!-- Perhitungan-Keliling-Persegi -->
                 <div class="perhitungan">
                     <h2>Hitung Keliling Persegi</h2>
-                    <input type="number" id="sisiKelP" placeholder="Nilai Sisi"><br>
+                    <input type="number" id="sisikelp" placeholder="Nilai Sisi"><br>
                     <button class="hitung" onclick="kelilingPersegi()">Hitung Keliling</button>
-                    <p id="hasilKelilingPersegi"></p>
+                    <p id="hasilkelilingpersegi"></p>
                     <button class="reset" onclick="resetKelilingPersegi()" >Reset</button>
                 </div>
             </div>
         </section>
 
         <!-- Section-Persegi-Panjang -->
-        <section id="persegiPanjang" class="calculator hidden">
+        <section id="persegipanjang" class="calculator hidden">
 
             <!-- Luas-Persegi-Panjang -->
-            <div class="hitungLuasKel">
+            <div class="hitungluaskel">
                 <h2>Luas Persegi Panjang</h2>
                 <!-- Gambar-Persegi-Panjang -->
-                <div class="gambarPersegiPanjang"></div>
+                <div class="gambarpersegipanjang"></div>
                 <!-- Keterangan-Rumus -->
                 <div class="keterangan">
                     <p>Rumus Luas Persegi Panjang Yaitu :</p>
@@ -94,16 +94,16 @@
                     <input type="number" id="panjang" placeholder="Nilai Panjang" >
                     <input type="number" id="lebar" placeholder="Nilai Lebar">
                     <button class="hitung" onclick="luasPersegiPanjang()">Hitung Luas</button>
-                    <p id="luasPersegiPanjang"></p>
+                    <p id="luaspersegipanjang"></p>
                     <button class="reset" onclick="resetLuasPersegiPanjang()">Reset</button>
                 </div>
             </div>
 
             <!-- Keliling-Persegi-Panjang -->
-            <div class="hitungLuasKel">
+            <div class="hitungluaskel">
                 <h2>Keliling Persegi Panjang</h2>
                  <!-- Gambar-Persegi-Panjang -->
-                <div class="gambarPersegiPanjang"></div>
+                <div class="gambarpersegipanjang"></div>
                 <!-- Keterangan-Rumus -->
                 <div class="keterangan">
                     <p>Rumus Keliling Persegi Panjang Yaitu :</p>
@@ -113,10 +113,10 @@
                 <!-- Perhitungan-Keliling-Persegi-Panjang -->
                 <div class="perhitungan">
                     <h2>Hitung Keliling Persegi Panjang</h2>
-                    <input type="number" id="panjangKel" placeholder="Nilai Panjang" >
-                    <input type="number" id="lebarKel" placeholder="Nilai Lebar">
+                    <input type="number" id="panjangkel" placeholder="Nilai Panjang" >
+                    <input type="number" id="lebarkel" placeholder="Nilai Lebar">
                     <button class="hitung" onclick="kelilingPersegiPanjang()">Hitung Keliling</button>
-                    <p id="kelilingPersegiPanjang"></p>
+                    <p id="kelilingpersegipanjang"></p>
                     <button class="reset" onclick="resetKelilingPersegiPanjang()">Reset</button>
                 </div>
             </div>
