Fix Problem CSS and JS

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KATIK - Kalkulator Matematika</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <script src="/js/script.js"></script>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -129,6 +128,9 @@
     <footer>
         <p>MADE BY WIJAYA</p>
     </footer>
+
+    <!-- JS -->
+    <script src="js/script.js"></script>
 </body>
 
 </html>
